--- a/index.html
+++ b/index.html
@@ -15,12 +15,8 @@
   </head>
 
   <body>
-    <!--Author    : Wafa Rifki Anafin-->
-    <!--Facebook  : https://facebook.com/wafarifkianafin-->
-    <!--Instagram : https://instagram.com/wafarifki_-->
-    <!--Website   : https://wafarifki.tk-->
     <div class="kontener2" id="kontener2">
-      <h1>Hai Sayang</h1>
+      <h1>Hai BUBUB</h1>
       <button class="tombol" id="tombol">Mulai Sekarang</button>
     </div>
 
@@ -56,7 +52,7 @@
           </div>
         </section>
         <section class="halaman4 dalemnya_halaman" onclick="PindahKeHalaman(3)">
-          <h1 class="judul_halaman">BUbub Salma Nur Salsabilla</h1>
+          <h1 class="judul_halaman">Bububb Salma Nur Salsabilla</h1>
           <br />
           <h1 id="waktu"></h1>
           <script type="text/javascript">
@@ -69,11 +65,11 @@
               document.write("<h1 class='ucapan'>Selamat Siang Sayang!</h1><p class='isiucapan'>Jangan Lupa Makan Yaa Sayang. i love you sayang <3<p>");
             } else if (jam >= 12 && jam <= 17) {
               document.write(
-                "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya sayang. i love you sayang <3<p>"
+                "<h1 class='ucapan'>Selamat Siang Menjelang Sore Sayang!</h1><p class='isiucapan'>Jangan Lupa Mandi + Jam demi jam telah kamu lalui dengan baik, persiapkan diri kamu untuk aktifitas yang akan datang ya sayang. i love you bububb <3<p>"
               );
             } else {
               document.write(
-                "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you sayang <3<p>"
+                "<h1 class='ucapan'>Selamat Malam Sayang!</h1><p class='isiucapan'>Setelah seharian beraktifitas, kini telah tiba saatnya untuk beristirahat, rebahkan dirimu di kasur kesayanganmu. kabari aku disetiap kegiatanmu. i love you bububb <3<p>"
               );
             }
             document.write("</center>");
