--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>I Love You</title>
-    <meta name="description" content="Semangat beraktifitas ya sayang" />
+    <meta name="description" content="Semangat untuk beraktifitas yaa bububb" />
     <meta name="author" content="Yudhit Rahmat Yanuar" />
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/efekteks.css" />
